examples/positive/L1/while.ob
MODULE While;

VAR i,x,y: INTEGER;

BEGIN
  x := 2;
  y := 3;
  i := 0;
  WHILE i < 3
  DO
    x := x * y;
    y := y * x;
    i := i + 1
  END;
  
END While.
