examples/negative/parse_errors/L1/orderofdeclaration.ob
MODULE Ood;

VAR y: INTEGER;
CONST x := 3;

BEGIN
  y := 4;
  y := x + y;
END Ood.
